regen ent schema to be able to update user meta data from admin api.
